filter, sort, search, fixed some other issues idk if it was only on my end